--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Vogel Andras</title>
+	<title>Vogel Andras</title>
+	<link rel='stylesheet" href="stilus.css'>
 </head>
 <body>
 
